--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -139,11 +139,11 @@ td,th{padding:0;}
 .con3-right{width: 321px;height: 100%;background: white;float: right;}
 
 .con3-right h1{display: block;font-size: 16px;height: 16px;color: #333333;margin: 17px 0px 0px 20px;line-height: 16px;float: left;}
-.con3-right div{width: 290px;height: 1px;background: #efefef;float: left;margin: 17px 0px 0px 15px;}
+.con3-right div{width: 290px;height: 1px;background: #efefef;margin: 17px 0px 0px 15px;}
 
-.con3-right img{display: block;width: 291px;height: 150px;float: left;margin: 17px 0px 0px 15px;}
+.con3-right img{display: block;width: 291px;height: 150px;margin: 17px 0px 0px 15px;}
 li.newlist{overflow: hidden;    text-overflow: ellipsis;    white-space: nowrap;}
-.con3-ul1{width: 291px;height: 143px;float: left;margin: 17px 0px 0px 15px;}
+.con3-ul1{width: 291px;margin: 0px 0px 0px 15px;}
 .con3-ul1 li a{display: block;font-size: 9px;color: #656565;margin-top: 8px;}
 .con3-ul1 li p{display: block;font-size: 9px;color: #b5b5b5;line-height: 20px;margin-top: 0px;}
 .con3-ul1 li a:hover{color: #d40822;}
@@ -155,7 +155,7 @@ li.newlist{overflow: hidden;    text-overflow: ellipsis;    white-space: nowrap;
 .con4-left{width: 859px;height:100%;background: white;float: left;}
 .con4-right{width: 321px;height: 100%;background: white;float: right;}
 
-.con4-left-top-1{display: block;font-size: 16px;height: 16px;color: #333333;margin: 17px 0px 0px 29px;line-height: 16px;float: left;}
+.con4-left-top-1{display: block;font-size: 16px;height: 16px;color: #333333;margin: 17px 0px 0px 29px;line-height: 16px;}
 .con4-left-top-2{height: 16px;font-size: 10px;color: #bbbbbb;float: right;margin: 17px 35px 0px 0px;line-height: 16px;}
 .con4-left-top-2:hover{color: #e4000f;}
 .con4-left-xian{width: 831px;height: 1px;background: #efefef;float: left;margin: 17px 0px 0px 14px;}
@@ -182,7 +182,7 @@ li.newlist{overflow: hidden;    text-overflow: ellipsis;    white-space: nowrap;
 .con4-right div{width: 290px;height: 1px;background: #efefef;float: left;margin: 17px 0px 0px 15px;}
 .con4-right img{display: block;width: 291px;height: 184px;float: left;margin: 15px 0px 0px 15px;}
 
-.con4-right ul{height: 220px;width: 291px;float: left;margin: 17px 0px 0px 15px;}
+.con4-right ul{height: 220px;width: 291px;float: left;margin: 0px 0px 0px 15px;}
 .con4-right ul li{width: 100%;height: 12px;margin-top: 16px;}
 .con4-right ul li a{display: block;font-size: 12px;color: #636363;line-height: 12px;}
 .con4-right ul li a span{margin-right: 20px;}
@@ -231,7 +231,7 @@ li.newlist{overflow: hidden;    text-overflow: ellipsis;    white-space: nowrap;
 
 .con5-right img{width: 291px;height: 180px;float: left;margin: 15px 0px 0px 15px;}
 
-.con5-right ul{width: 291px;height: 215px;float: left;margin: 17px 0px 0px 15px;}
+.con5-right ul{width: 291px;height: 215px;float: left;margin: 0px 0px 0px 15px;}
 .con5-right ul li{width: 100%;height: 12px;margin-top: 16px; overflow: hidden;    text-overflow: ellipsis;    white-space: nowrap;}
 .con5-right ul li a{display: block;font-size: 12px;color: #636363;line-height: 12px;}
 .con5-right ul li a:hover{color: #d40822;}
