--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -488,10 +488,10 @@ ul.pagination li a.disabled {    color: #ddd}
 .zi2{width: 430px;height: 50px;float: left;margin-left: 20px;}
 .zi2 a{display: block;width: 100%;height: 50px;font-size: 14px;color: #1684ea;line-height: 50px;}
 .b_con3{width: 1200px;margin-top: 20px;}
-.b_con3-left{width: 839px;float: left;background: white;}
+.b_con3-left{width: 849px;float: left;background: white;}
 .b_con3-left-top{width: 100%;height: 48px;border-bottom: 1px solid #eceff2;}
-.b_con3-left-top li{float: left;height: 48px;width: 110px;border-right: 1px solid #eceff2;}
-.b_con3-left-top li a{display: block;font-size: 14px;color: #4b4b4b;height: 48px;width: 100%;line-height: 48px;text-align: center;}
+.b_con3-left-top li{float: left;height: 48px;border-right: 1px solid #eceff2; padding: 0 20px;}
+.b_con3-left-top li span{display: block;font-size: 14px;color: #4b4b4b;height: 48px;width: 100%;line-height: 48px;text-align: center; cursor: pointer}
 .b_con3-1{width: 799px; margin: 20px 0px 0px 20px; margin-bottom: 10px;}
 .b_con3-1 div{width: 3px;height: 18px;background: #12b7a1;float: left;}
 .b_con3-1 h1{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
@@ -502,7 +502,7 @@ ul.pagination li a.disabled {    color: #ddd}
 .b_con1-right-con ul{float: left;width: 228px;height: 130px;}
 .b_con1-right-con ul li p{display: block;font-size: 12px;height: 12px;line-height: 12px;color: #9d9c9d;margin-top: 15px;}
 .b_con1-right-con ul li p span{color: #6e6460;margin-left: 10px;}
-.b_con3-2{width: 740px;background: #fff;  padding: 15px 30px 20px 30px;}
+.b_con3-2{width: 780px;background: #fff;  padding: 15px 30px 20px 30px;}
 .b_con3-2 h2{ position: relative;    color: #12b7a1 !important; font-size: 18px;   padding: 0 3px 0 0; padding-left: 10px;   border-bottom: 2px solid #EDEDED;    height: 40px;    line-height: 40px;    font-weight: bold;    margin-bottom: 10px;}
 .b_con3-2 h2:after {    position: absolute;    left: 0px;    top: 12px;    width: 3px;    height: 18px;    background-color: #12b7a1;    content: '';}
 .b_con3-2 p,.b_con3-2div,.b_con3-2 table {text-indent: 1em; line-height: 30px; margin-top: 10px;}
