--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -99,7 +99,8 @@ td,th{padding:0;}
 
 .con2-left-right{width: 553px;height: 400px;float: left;margin: 17px 0px 0px 20px; }
 .con2-left-right dl{width: 175px;height: 200px;float: left;margin-left: 9px;}
-.con2-left-right dl dt{width: 175px;height: 140px; position: relative;}
+.con2-left-right dl dt{width: 175px;height: 140px; position: relative; overflow: hidden;}
+.con2-left-right dl dt a img{width: 175px; height: 140px; overflow: hidden;}
 .con2-left-right dl dt:hover a img{    opacity: 0.6;}
 .con2-left-right dl dt .brandinfo{position: absolute; top:5px; left: 10px;}
 .con2-left-right dl dt strong{display: block;width: 160px;height: 17px;font-size: 17px;color: #676767;float: left;margin: 10px 0px 0px 9px;line-height: 17px;font-weight: normal;}
