--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -100,14 +100,14 @@ td,th{padding:0;}
 .con2-left-right{width: 553px;height: 400px;float: left;margin: 17px 0px 0px 20px; }
 .con2-left-right dl{width: 175px;height: 200px;float: left;margin-left: 9px;}
 .con2-left-right dl dt{width: 175px;height: 140px; position: relative; overflow: hidden;}
-.con2-left-right dl dt a img{width: 175px; height: 140px; overflow: hidden;}
+.con2-left-right dl dt a img{width: 175px; height: 140px; overflow: hidden; border-radius: 5px;}
 .con2-left-right dl dt:hover a img{    opacity: 0.6;}
 .con2-left-right dl dt .brandinfo{position: absolute; top:5px; left: 10px;}
 .con2-left-right dl dt strong{display: block;width: 160px;height: 17px;font-size: 17px;color: #676767;float: left;margin: 10px 0px 0px 9px;line-height: 17px;font-weight: normal;}
 .con2-left-right dl dt p{display: block;width: 160px;height: 12px;font-size: 12px;color: #676767;line-height: 12px;float: left;margin: 6px 0px 0px 9px;font-weight: normal;}
 .con2-left-right dd p{display: block;height: 10px;width: 100%;line-height: 10px; font-size:10px; color: #2b2b2b;margin-top: 10px;}
 .con2-left-right dl dd p span{color: #d80916;}
-.con2-left-right dl dd h3{display: block;height: 12px;color: #e8000f;float: left;margin: 10px 0px 0px 0px;}
+.con2-left-right dl dd h3{display: block;color: #e8000f;float: left;margin: 10px 0px 0px 0px; width: 89px; overflow: hidden;    text-overflow: ellipsis;    white-space: nowrap;}
 .con2-left-right dl dd a{display: block;width: 72px;height: 18px;border: 1px solid #666666;border-radius: 4px;font-size: 11px;color: #666666;line-height: 18px;text-align: center;float: right;margin-top: 8px;}
 .con2-left-right dl dd a:hover{border: 1px solid #e4000f;background: #e4000f;color: white;}
 
