--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -737,7 +737,7 @@ dl.paihangbf{display: inline-block; width: 180px;}
 .content{width: 802px;margin-left: 20px;}
 .content h2{width: 100%;height: 19px;font-size: 19px;color: #5b5b5b;line-height: 19px;}
 .content ul{width: 100%;height: 250px;margin-top: 20px;}
-.content p{;font-size: 14px;color: #4a4a4a;letter-spacing: 1px;line-height: 16px;margin-top: 24px;}
+.content p{    text-indent: 1.5em;    line-height: 30px;    margin-bottom: 10px; font: 14px/20px 'Microsoft YaHei';     color: #666666;}
 .biaoqian{width: 802px;height: 88px;margin: 30px 0px 0px 20px;}
 .biaoqian p{width: 750px;height: 16px;font-size: 16px;line-height: 16px;color: #a2a2a2;  margin-bottom: 10px;}
 .biaoqian a{color: #5f5f5f;}
